  * StatBlock: 'stat', 'stat_per_level', 'stat_per_primary', 'vulnerable', 'chance_pursue', 'chance_flee'
* Added engine/number_format.txt. This file defines the number of digits to print after the decimal point for fractional values under different contexts.
* Add support for multiplicative stat bonuses. For example, an item bonus of 1.5x Max HP, which would be defined as 'bonus=hp,150%'.

Engine fixes:

* Fixed set item tooltips showing incorrect number of equipped items if a set item was on an inactive loadout.
* Fixed dev console commands not working if they were preceded by whitespace.
* Fixed spawning entities not counting towards summoned entity count.
* Fix broken gamepad navigation after closing Powers menu while on a non-default tab.
* Removed hard-coded minimum values for HP/MP steal and damage return.
* Fixed "activate" message incorrectly showing in MenuPowers tooltips.
* Fix some cases where 'min' damage/absorb could be greater than the cooresponding 'max' value.

Game updates:

* Fireball and Ice Bolt scrolls now give the player a 10 second period in which their basic attacks (Swing, Shoot, Channel) are replaced with the scroll power.
* Fixed the naming of scroll damage as it appears in power description tooltips.

Translation updates:

* German (de) update (Wuzzy2)
* Japanese (ja) update (Sato Hayato)
* Polish (pl) update (Pawonashi)
* Chinese (zh) update (Issac Zhang)



Flare v1.13.04

Engine features:

* Added 'bar_gfx' property to menus/enemy.txt for setting the "fill" image

Engine fixes:

* Fix crash when trying to read a non-existent file with INCLUDE
* Fix passive powers not being correctly re-applied after death
* Improve performance of WidgetListBox by caching all items instead of just the visible ones



Flare v1.13 (https://flarerpg.org/2022/01/31/flare-1-13/)

Engine features:
