@@ -2390,10 +2390,6 @@ code {
 
 <p><strong>resist_mp_steal</strong> | Percentage chance that MP steal will be negated</p>
 
-<p><strong>hp_percent</strong> | Base HP altered by percentage</p>
-
-<p><strong>mp_percent</strong> | Base MP altered by percentage</p>
-
 </div>
 
 <div class="footer">
