@@ -49,8 +49,6 @@ namespace Stats {
 		RESIST_DAMAGE_REFLECT,
 		RESIST_HP_STEAL,
 		RESIST_MP_STEAL,
-		HP_PERCENT,
-		MP_PERCENT,
 		COUNT
 	};
 
